# poker-solver

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: fast-check.yml  full-check.yml
benches/: solver.rs
src/: lib.rs  main.rs  poker.rs  utils.rs
src/poker/: evaluator.rs  game.rs  hand.rs  mod.rs  range.rs
