[package]
name = "poker-solver"
version = "0.1.0"
authors = ["hucancode <hucancode@gmail.com>"]
edition = "2021"
description = "A tool to approximate your winning chance in a Texas Holdem poker game"
keywords = ["poker"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hucancode/poker-solver"

[dependencies]
wasm-bindgen = { version = "0.2.63" }

[profile.release]
lto = true
debug = true

[lib]
crate-type = ["cdylib"]
