[package]
name = "poker-solver"
version = "0.2.0"
authors = ["hucancode <hucancode@gmail.com>"]
edition = "2021"
description = "A tool to approximate your winning chance in a Texas Holdem poker game"
keywords = ["poker"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hucancode/poker-solver"

[dependencies]

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "solver"
harness = false
